# PTMT-Backend

./: .env.example  .gitignore  Dockerfile  GROBID_COMPLETE_GUIDE.md  README.md  alembic.ini  pyproject.toml
alembic/: env.py
app/: __init__.py  main.py
app/api/: deps.py  router.py
app/api/routes/: auth.py  curriculums.py  papers.py  users.py
app/api/v1/: deps.py  router.py
app/api/v1/routes/: auth.py  curriculums.py  papers.py  users.py
app/core/: __init__.py  auth_errors.py  config.py  security.py
app/crud/: __init__.py  curriculums.py  errors.py  junctions.py  papers.py  refresh_tokens.py  supabase_client.py  users.py
app/models/: __init__.py  curriculum.py  junctions.py  paper.py  user.py
app/schemas/: __init__.py  auth.py  common.py  curriculum.py  paper.py  user.py
app/services/: __init__.py  auth_service.py  curriculum_generation_service.py  key_queue_service.py  paper_service.py  pdf_service.py
app/utils/: __init__.py  arxiv_paper_search.py  grobid_xml_to_json.py
docs/: API_REFERENCE.md  RDB_SCHEMA.md
scripts/: cloudflare_setting.sh  demo_supabase_crud.py  grobid_setting.sh  prestart.sh  run_server.sh  test.sh
tests/: __init__.py  conftest.py
tests/api/: test_auth.py
tests/crud/: __init__.py  test_curriculums_crud.py  test_junctions_crud.py  test_papers_crud.py  test_refresh_tokens_crud.py  test_user_curriculum_and_curriculum_paper_lookup_crud.py  test_user_paper_lookup_crud.py  test_users_crud.py
tests/services/: test_key_queue_service.py
